--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -1,5 +1,8 @@
 {
+  "item.better_mcdonalds_mod_fabric.cheese": "Cheese",
   "itemGroup.better_mcdonalds_mod_fabric.mod_creative_tab": "Better McDonalds Mod",
   "block.better_mcdonalds_mod_fabric.salt_block": "Salt Block",
+  "item.better_mcdonalds_mod_fabric.mayonnaise": "Mayonnaise",
+  "item.better_mcdonalds_mod_fabric.knife": "Knife",
   "item.better_mcdonalds_mod_fabric.salt": "Salt"
 }
