--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -3,6 +3,8 @@
   "itemGroup.better_mcdonalds_mod_fabric.mod_creative_tab": "Better McDonalds Mod",
   "block.better_mcdonalds_mod_fabric.salt_block": "Salt Block",
   "item.better_mcdonalds_mod_fabric.mayonnaise": "Mayonnaise",
+  "item.better_mcdonalds_mod_fabric.cooked_beef_patty": "Cooked Beef Patty",
   "item.better_mcdonalds_mod_fabric.knife": "Knife",
-  "item.better_mcdonalds_mod_fabric.salt": "Salt"
+  "item.better_mcdonalds_mod_fabric.salt": "Salt",
+  "item.better_mcdonalds_mod_fabric.beef_patty": "Beef Patty"
 }
