--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -6,5 +6,6 @@
   "item.better_mcdonalds_mod_fabric.cooked_beef_patty": "Cooked Beef Patty",
   "item.better_mcdonalds_mod_fabric.knife": "Knife",
   "item.better_mcdonalds_mod_fabric.salt": "Salt",
-  "item.better_mcdonalds_mod_fabric.beef_patty": "Beef Patty"
+  "item.better_mcdonalds_mod_fabric.beef_patty": "Beef Patty",
+  "item.better_mcdonalds_mod_fabric.fries": "Fries"
 }
