--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -1,13 +1,14 @@
 {
   "item.better_mcdonalds_mod_fabric.sweet_sour_sauce": "Sweet \u0027N Sour Sauce",
-  "item.better_mcdonalds_mod_fabric.cheese": "Cheese",
   "item.better_mcdonalds_mod_fabric.hamburger": "Hamburger",
   "itemGroup.better_mcdonalds_mod_fabric.mod_creative_tab": "Better McDonalds Mod",
   "block.better_mcdonalds_mod_fabric.salt_block": "Salt Block",
-  "item.better_mcdonalds_mod_fabric.mayonnaise": "Mayonnaise",
   "item.better_mcdonalds_mod_fabric.cooked_beef_patty": "Cooked Beef Patty",
   "item.better_mcdonalds_mod_fabric.knife": "Knife",
   "item.better_mcdonalds_mod_fabric.salt": "Salt",
-  "item.better_mcdonalds_mod_fabric.beef_patty": "Beef Patty",
-  "item.better_mcdonalds_mod_fabric.fries": "Fries"
+  "item.better_mcdonalds_mod_fabric.fries": "Fries",
+  "item.better_mcdonalds_mod_fabric.cheese": "Cheese",
+  "item.better_mcdonalds_mod_fabric.cheeseburger": "Cheeseburger",
+  "item.better_mcdonalds_mod_fabric.mayonnaise": "Mayonnaise",
+  "item.better_mcdonalds_mod_fabric.beef_patty": "Beef Patty"
 }
