--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.better_mcdonalds_mod_fabric.knife": "Knife",
   "item.better_mcdonalds_mod_fabric.salt": "Salt",
   "item.better_mcdonalds_mod_fabric.fries": "Fries",
+  "item.better_mcdonalds_mod_fabric.big_mac": "Big Mac",
   "item.better_mcdonalds_mod_fabric.cheese": "Cheese",
   "item.better_mcdonalds_mod_fabric.cheeseburger": "Cheeseburger",
   "item.better_mcdonalds_mod_fabric.mayonnaise": "Mayonnaise",
