--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.better_mcdonalds_mod_fabric.big_mac": "Big Mac",
   "item.better_mcdonalds_mod_fabric.cheese": "Cheese",
   "item.better_mcdonalds_mod_fabric.cheeseburger": "Cheeseburger",
+  "item.better_mcdonalds_mod_fabric.chickenburger": "Chickenburger",
   "item.better_mcdonalds_mod_fabric.mayonnaise": "Mayonnaise",
   "item.better_mcdonalds_mod_fabric.beef_patty": "Beef Patty"
 }
