--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -8,6 +8,7 @@
   "item.better_mcdonalds_mod_fabric.salt": "Salt",
   "item.better_mcdonalds_mod_fabric.fries": "Fries",
   "item.better_mcdonalds_mod_fabric.big_mac": "Big Mac",
+  "item.better_mcdonalds_mod_fabric.filet_o_fish": "Filet O Fish",
   "item.better_mcdonalds_mod_fabric.cheese": "Cheese",
   "item.better_mcdonalds_mod_fabric.cheeseburger": "Cheeseburger",
   "item.better_mcdonalds_mod_fabric.chickenburger": "Chickenburger",
