--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.better_mcdonalds_mod_fabric.sweet_sour_sauce": "Sweet \u0027N Sour Sauce",
   "item.better_mcdonalds_mod_fabric.hamburger": "Hamburger",
+  "item.better_mcdonalds_mod_fabric.chicken_nuggets": "Chicken Nuggets",
   "itemGroup.better_mcdonalds_mod_fabric.mod_creative_tab": "Better McDonalds Mod",
   "item.better_mcdonalds_mod_fabric.cooked_beef_patty": "Cooked Beef Patty",
   "block.better_mcdonalds_mod_fabric.salt_block": "Salt Block",
