--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.better_mcdonalds_mod_fabric.coca_cola": "Coca-Cola",
   "item.better_mcdonalds_mod_fabric.sweet_sour_sauce": "Sweet \u0027N Sour Sauce",
   "item.better_mcdonalds_mod_fabric.hamburger": "Hamburger",
   "item.better_mcdonalds_mod_fabric.chicken_nuggets": "Chicken Nuggets",
