Added Lipton Ice Tea Peach

--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -7,6 +7,7 @@
   "itemGroup.better_mcdonalds_mod_fabric.mod_creative_tab": "Better McDonalds Mod",
   "item.better_mcdonalds_mod_fabric.cooked_beef_patty": "Cooked Beef Patty",
   "block.better_mcdonalds_mod_fabric.salt_block": "Salt Block",
+  "item.better_mcdonalds_mod_fabric.lipton_ice_tea_peach": "Lipton Ice Tea Peach",
   "item.better_mcdonalds_mod_fabric.knife": "Knife",
   "item.better_mcdonalds_mod_fabric.salt": "Salt",
   "item.better_mcdonalds_mod_fabric.fries": "Fries",
