--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.better_mcdonalds_mod_fabric.cheese": "Cheese",
   "item.better_mcdonalds_mod_fabric.cheeseburger": "Cheeseburger",
   "item.better_mcdonalds_mod_fabric.chickenburger": "Chickenburger",
+  "item.better_mcdonalds_mod_fabric.happy_meal": "Happy Meal",
   "item.better_mcdonalds_mod_fabric.mayonnaise": "Mayonnaise",
   "item.better_mcdonalds_mod_fabric.beef_patty": "Beef Patty",
   "item.better_mcdonalds_mod_fabric.mc_chicken": "Mc Chicken"
