--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.better_mcdonalds_mod_fabric.big_mac": "Big Mac",
   "item.better_mcdonalds_mod_fabric.filet_o_fish": "Filet O Fish",
   "item.better_mcdonalds_mod_fabric.sprite": "Sprite",
+  "item.better_mcdonalds_mod_fabric.mc_flurry": "Mc Flurry",
   "item.better_mcdonalds_mod_fabric.cheese": "Cheese",
   "item.better_mcdonalds_mod_fabric.cheeseburger": "Cheeseburger",
   "item.better_mcdonalds_mod_fabric.chickenburger": "Chickenburger",
