--- a/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
+++ b/src/main/resources/assets/better_mcdonalds_mod_fabric/lang/en_us.json
@@ -1,25 +1,35 @@
 {
-  "item.better_mcdonalds_mod_fabric.coca_cola": "Coca-Cola",
   "item.better_mcdonalds_mod_fabric.fanta": "Fanta",
+  "advancements.get_salt_advancement.title": "Very salty!",
   "item.better_mcdonalds_mod_fabric.sweet_sour_sauce": "Sweet \u0027N Sour Sauce",
   "item.better_mcdonalds_mod_fabric.hamburger": "Hamburger",
-  "item.better_mcdonalds_mod_fabric.chicken_nuggets": "Chicken Nuggets",
+  "advancements.mod_start_advancement.descr": "Start of the mod",
   "itemGroup.better_mcdonalds_mod_fabric.mod_creative_tab": "Better McDonalds Mod",
-  "item.better_mcdonalds_mod_fabric.cooked_beef_patty": "Cooked Beef Patty",
-  "block.better_mcdonalds_mod_fabric.salt_block": "Salt Block",
   "item.better_mcdonalds_mod_fabric.lipton_ice_tea_peach": "Lipton Ice Tea Peach",
-  "item.better_mcdonalds_mod_fabric.knife": "Knife",
+  "advancements.mod_start_advancement.title": "Better McDonalds Mod",
+  "advancements.craft_burger_advancement.descr": "Craft a hamburger",
   "item.better_mcdonalds_mod_fabric.salt": "Salt",
   "item.better_mcdonalds_mod_fabric.fries": "Fries",
   "item.better_mcdonalds_mod_fabric.big_mac": "Big Mac",
   "item.better_mcdonalds_mod_fabric.filet_o_fish": "Filet O Fish",
+  "advancements.get_salt_advancement.descr": "Obtain salt from rivers",
   "item.better_mcdonalds_mod_fabric.sprite": "Sprite",
   "item.better_mcdonalds_mod_fabric.mc_flurry": "Mc Flurry",
   "item.better_mcdonalds_mod_fabric.cheese": "Cheese",
   "item.better_mcdonalds_mod_fabric.cheeseburger": "Cheeseburger",
+  "item.better_mcdonalds_mod_fabric.mayonnaise": "Mayonnaise",
+  "item.better_mcdonalds_mod_fabric.mc_chicken": "Mc Chicken",
+  "item.better_mcdonalds_mod_fabric.coca_cola": "Coca-Cola",
+  "item.better_mcdonalds_mod_fabric.chicken_nuggets": "Chicken Nuggets",
+  "advancements.craft_knife_advancement.title": "Cut it into half!",
+  "item.better_mcdonalds_mod_fabric.cooked_beef_patty": "Cooked Beef Patty",
+  "block.better_mcdonalds_mod_fabric.salt_block": "Salt Block",
+  "item.better_mcdonalds_mod_fabric.knife": "Knife",
+  "advancements.craft_drink_advancement.descr": "Craft a Coca-Cola",
+  "advancements.craft_knife_advancement.descr": "Craft a knife",
   "item.better_mcdonalds_mod_fabric.chickenburger": "Chickenburger",
   "item.better_mcdonalds_mod_fabric.happy_meal": "Happy Meal",
-  "item.better_mcdonalds_mod_fabric.mayonnaise": "Mayonnaise",
-  "item.better_mcdonalds_mod_fabric.beef_patty": "Beef Patty",
-  "item.better_mcdonalds_mod_fabric.mc_chicken": "Mc Chicken"
+  "advancements.craft_burger_advancement.title": "Your first burger",
+  "advancements.craft_drink_advancement.title": "Your first drink",
+  "item.better_mcdonalds_mod_fabric.beef_patty": "Beef Patty"
 }
